--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ p {
 .hero {
   position: relative;
   height: 100vh;
-  background: url('main_image.jpeg') no-repeat center center/cover;
+  background: url('main_image.jpg') no-repeat center center/cover;
   display: flex;
   justify-content: center;
   align-items: center;
